# chip8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: chip8.c  chip8.h  main.c
